--- a/src/index.ejs
+++ b/src/index.ejs
@@ -33,9 +33,9 @@
                         </span>
                     <button id="new-project-btn"></button>
                     <ul id="project-list">    
-                        <li><span><a href="#" class="personal">Personal</a></span></li>
+                        <!-- <li><span><a href="#" class="personal">Personal</a></span></li>
                         <li><span><a href="#" class="work">Work</a></span></li>
-                        <li><span><a href="#" class="high_priority">High Priority</a></span></li>
+                        <li><span><a href="#" class="high_priority">High Priority</a></span></li> -->
                     </ul>
                 </ul>
             </div>
@@ -66,9 +66,9 @@
                             <div id="project-btn">
                                 <select id="project-selection">
                                     <option id="project-default" selected>Project</option>
-                                    <option id="personal">Personal</option>
-                                    <option id="work">Work</option>
-                                    <option id="high_priority">High Priority</option>
+                                    <!-- <option id="personal-opt">Personal</option>
+                                    <option id="work-opt">Work</option>
+                                    <option id="high-priority-opt">High Priority</option> -->
                                 </select>
                             </div>
                             <div id="priority-btn">
